samples/pass/global_array.c
int nums[3];

int main() {
    nums[0] = 4;
    nums[1] = 5;
    nums[2] = nums[0] + nums[1];
    print_int(nums[2]);
    print_newline();
    return nums[2];
}
