samples/fail/duplicate_global.c
int g = 1;
int g = 2;

int main() {
    return g;
}
